--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lessons Learned</title>
   <link rel="stylesheet" format="text/css" href="style.css">
 </head>
@@ -11,5 +9,8 @@
   <header id="cabecalho">
     <h1 id="título">As dores do aprendizado</h1>
   </header>
+  <figure>
+    <img href="rodrigo.jpg" alt="Foto do Rodrigo"
+  </figure>
 </body>
 </html>
