--- a/index.html
+++ b/index.html
@@ -7,10 +7,41 @@
 </head>
 <body>
   <header id="cabecalho">
-    <h1 id="título">As dores do aprendizado</h1>
+    <h1 id="titulo">As dores do aprendizado</h1>
   </header>
   <figure>
-    <img href="rodrigo.jpg" alt="Foto do Rodrigo"
+    <img id="minha_foto" src=rodrigo.jpg alt="Foto do Rodrigo">
   </figure>
+  <section>
+    <h2>Lições aprendidas</h2>
+    <ol id="licoes_aprendidas">
+      <li>Unix e Bash</li>
+      <li>Git e Github</li>
+      <li>Como funciona a internet</li>
+      <li>Estruturação em HTML</li>
+      <li>HTML semântico</li>
+      <li>Estilos com CSS</li>
+      <li>Importância das soft skills</li>
+      <li>Manipulação do perfil no Linkedin</li>
+      <li>Ética na programação</li>
+      <li>Utilização dos aplicativos Zoom e Slack</li>
+    </ol>
+  </section>
+    <h2>Lições a aprender</h2>
+    <ul id="licoes_a_aprender">
+      <li>JavaScript</li>
+      <li>Lógica de Programação</li>
+      <li>React</li>
+      <li>SQL</li>
+      <li>NodeJS</li>
+      <li>MongoDB</li>
+      <li>Desenvolvimento das soft skills</li>
+      <li>Python</li>
+      <li>Ciência da computação</li>
+      <li>Dicas de produtividade</li>
+    </ul>
+  <section>
+
+  </section>
 </body>
 </html>
