--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li>Utilização dos aplicativos Zoom e Slack</li>
     </ol>
   </section>
+  <section>
     <h2>Lições a aprender</h2>
     <ul id="licoes_a_aprender">
       <li>JavaScript</li>
@@ -40,8 +41,11 @@
       <li>Ciência da computação</li>
       <li>Dicas de produtividade</li>
     </ul>
-  <section>
-
   </section>
+  <footer id="rodape">
+    <h2>Ficou interessado no curso da Trybe?</h2>
+    <a href=https://www.betrybe.com/ alt="Site da Trybe" target="_blank">
+    Acesse o site e cadastre-se para participar do processo seletivo!</a>
+  </footer>
 </body>
 </html>
