Estrutura finalizada (comittão bomba)

--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
   <header id="cabecalho">
     <h1 id="titulo">As dores do aprendizado</h1>
   </header>
-  <figure>
+    <figure>
     <img id="minha_foto" src=rodrigo.jpg alt="Foto do Rodrigo">
-  </figure>
+    </figure>
+    <nav>
+      <h2>Navegação</h2>
+      <ul>
+      <li><a href="licoes_aprendidas">Lições aprendidas</a></li>
+      <li><a href="licoes_a_aprender">Lições a aprender</a></li>
+      <li><a href="lado_esquerdo">Detalhes sobre meu aprendizado na Trybe</a></li>
+      <li><a href="lado_direito">A dor de ser um eterno aprendiz</a></li>
+      <li><a href="rodape">Como entrar na Trybe</a></li>
+      </ul>
+    </nav>
   <section>
     <h2>Lições aprendidas</h2>
     <ol id="licoes_aprendidas">
@@ -42,6 +52,27 @@
       <li>Dicas de produtividade</li>
     </ul>
   </section>
+  <article class="lado_esquerdo">
+    <h2>Detalhes sobre meu aprendizado na Trybe</h2>
+    <p>
+      Ao entrar na Trybe, eu era um completo iniciante em programação<br>
+      (e ainda sou), porém, em menos de um mês, já realizo comandos<br>
+      básicos através do terminal do Linux, como criar, mover, remover e<br>
+      navegar por arquivos e diretórios. Também possuo uma base de Git e<br>
+      Github, o que me permite criar repositórios, conectar o remoto<br>
+      ao local e realizar interações entre eles. Com o módulo de HTML e<br>
+      CSS, me tornei capaz de criar páginas da web (como esta XD).
+    </p>
+  </article>
+  <aside class="lado_direito">
+    <h2>A dor de ser um eterno aprendiz</h2>
+    <p>
+      Todo esse aprendizado apenas foi conquistado por conta da dedicação<br>
+      da equipe da Trybe e do meu próprio esforço. Existem dias em que o<br>
+      conteúdo pode assustar novatos (<i>#everyday</i>), porém, nada que manter o<br>
+      foco e permanecer tentando/procurando ajuda não solucione.<br>
+    </p>
+  </aside>
   <footer id="rodape">
     <h2>Ficou interessado no curso da Trybe?</h2>
     <a href=https://www.betrybe.com/ alt="Site da Trybe" target="_blank">
