--- a/index.html
+++ b/index.html
@@ -4,79 +4,113 @@
   <meta charset="UTF-8">
   <title>Lessons Learned</title>
   <link rel="stylesheet" format="text/css" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Reggae+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <header id="cabecalho">
-    <h1 id="titulo">As dores do aprendizado</h1>
+    <h1 id="titulo">AS DORES DO APRENDIZADO</h1>
   </header>
-    <figure>
-    <img id="minha_foto" src=rodrigo.jpg alt="Foto do Rodrigo">
-    </figure>
-    <nav>
-      <h2>Navegação</h2>
-      <ul>
-      <li><a href="licoes_aprendidas">Lições aprendidas</a></li>
-      <li><a href="licoes_a_aprender">Lições a aprender</a></li>
-      <li><a href="lado_esquerdo">Detalhes sobre meu aprendizado na Trybe</a></li>
-      <li><a href="lado_direito">A dor de ser um eterno aprendiz</a></li>
-      <li><a href="rodape">Como entrar na Trybe</a></li>
-      </ul>
-    </nav>
-  <section>
-    <h2>Lições aprendidas</h2>
-    <ol id="licoes_aprendidas">
-      <li>Unix e Bash</li>
-      <li>Git e Github</li>
-      <li>Como funciona a internet</li>
-      <li>Estruturação em HTML</li>
-      <li>HTML semântico</li>
-      <li>Estilos com CSS</li>
-      <li>Importância das soft skills</li>
-      <li>Manipulação do perfil no Linkedin</li>
-      <li>Ética na programação</li>
-      <li>Utilização dos aplicativos Zoom e Slack</li>
-    </ol>
-  </section>
-  <section>
-    <h2>Lições a aprender</h2>
-    <ul id="licoes_a_aprender">
-      <li>JavaScript</li>
-      <li>Lógica de Programação</li>
-      <li>React</li>
-      <li>SQL</li>
-      <li>NodeJS</li>
-      <li>MongoDB</li>
-      <li>Desenvolvimento das soft skills</li>
-      <li>Python</li>
-      <li>Ciência da computação</li>
-      <li>Dicas de produtividade</li>
-    </ul>
-  </section>
-  <article class="lado_esquerdo">
-    <h2>Detalhes sobre meu aprendizado na Trybe</h2>
-    <p>
-      Ao entrar na Trybe, eu era um completo iniciante em programação<br>
-      (e ainda sou), porém, em menos de um mês, já realizo comandos<br>
-      básicos através do terminal do Linux, como criar, mover, remover e<br>
-      navegar por arquivos e diretórios. Também possuo uma base de Git e<br>
-      Github, o que me permite criar repositórios, conectar o remoto<br>
-      ao local e realizar interações entre eles. Com o módulo de HTML e<br>
-      CSS, me tornei capaz de criar páginas da web (como esta XD).
-    </p>
-  </article>
-  <aside class="lado_direito">
-    <h2>A dor de ser um eterno aprendiz</h2>
-    <p>
-      Todo esse aprendizado apenas foi conquistado por conta da dedicação<br>
-      da equipe da Trybe e do meu próprio esforço. Existem dias em que o<br>
-      conteúdo pode assustar novatos (<i>#everyday</i>), porém, nada que manter o<br>
-      foco e permanecer tentando/procurando ajuda não solucione.<br>
-    </p>
-  </aside>
-  <footer id="rodape">
-    <h2>Ficou interessado no curso da Trybe?</h2>
-    <a href=https://www.betrybe.com/ alt="Site da Trybe" target="_blank">
-    Acesse o site e cadastre-se para participar do processo seletivo!</a>
-  </footer>
+  <div id="main_structure">
+    <main>
+      <figure>
+      <img id="minha_foto" src=rodrigo.jpg alt="Foto do Rodrigo">
+      </figure>
+      <nav>
+        <h2>Navegação</h2>
+        <ul>
+          <li><a href="#licoes_aprendidas">Lições aprendidas</a></li>
+          <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
+          <li><a href="#lado-esquerdo">Detalhes sobre meu aprendizado na Trybe</a></li>
+          <li><a href="#lado-esquerdo">A dor de ser um eterno aprendiz</a></li>
+          <li><a href="#rodape">Como entrar na Trybe</a></li>
+        </ul>
+      </nav>
+      <section>
+        <h2>Lições aprendidas</h2>
+        <ol id="licoes_aprendidas">
+          <li>Unix e Bash</li>
+          <li>Git e Github</li>
+          <li>Como funciona a internet</li>
+          <li>Estruturação em HTML</li>
+          <li>HTML semântico</li>
+          <li>Estilos com CSS</li>
+          <li>Importância das soft skills</li>
+          <li>Manipulação do perfil no Linkedin</li>
+          <li>Ética na programação</li>
+          <li>Utilização dos aplicativos Zoom e Slack</li>
+        </ol>
+      </section>
+      <section>
+        <h2>Lições a aprender</h2>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>Lógica de Programação</li>
+          <li>React</li>
+          <li>SQL</li>
+          <li>NodeJS</li>
+          <li>MongoDB</li>
+          <li>Desenvolvimento das soft skills</li>
+          <li>Python</li>
+          <li>Ciência da computação</li>
+          <li>Dicas de produtividade</li>
+        </ul>
+      </section>
+      <article class="lado-esquerdo" id="lado-esquerdo">
+        <h2>Detalhes do meu aprendizado na Trybe</h2>
+        <p>
+          Ao entrar na Trybe, eu era um completo iniciante em programação
+          (e ainda sou), porém, em menos de um mês, já realizo comandos
+          básicos através do terminal do Linux, como criar, mover, remover e
+          navegar por arquivos e diretórios. Também possuo uma base de Git e
+          Github, o que me permite criar repositórios, conectar o remoto
+          ao local e realizar interações entre eles. Com o módulo de HTML e
+          CSS, me tornei capaz de criar páginas da web (como esta XD).
+        </p>
+      </article>
+      <section id="table">
+        <h2>Exemplos de comandos aprendidos</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Módulo</th>
+              <th>Comando</th>
+              <th>Função</th>
+            </tr>
+          </thead>
+          <tbody>
+              <th>Unix</th>
+              <td>mkdir 'nome_do_diretorio'</td>
+              <td>Cria um diretório no local atual</td>
+            </tr>
+            <tr>
+              <th>HTML</th>
+              <td>Usar a tag 'ul'</td>
+              <td>Cria uma lista ordenada</td>
+            </tr>
+            <tr>
+              <th>CSS</th>
+              <td>background-color</td>
+              <td>Define uma nova cor para o plano de fundo</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <footer id="rodape">
+        <h2>Ficou interessado no curso da Trybe?</h2>
+        <a href=https://www.betrybe.com/ alt="Site da Trybe" target="_blank">
+          Acesse o site e cadastre-se para participar do processo seletivo!</a>
+      </footer>
+    </main>
+    <aside class="lado-direito" id="lado-direito">
+      <h2>A dor de ser um eterno aprendiz</h2>
+      <p>
+        Todo esse aprendizado apenas foi conquistado por conta da dedicação
+        da equipe da Trybe e do meu próprio esforço. Existem dias em que o
+        conteúdo pode assustar novatos (<i>#everyday</i>), porém, nada que manter o
+        foco e permanecer tentando/procurando ajuda não solucione.
+      </p>
+    </aside>
+  </div>
 </body>
 </html>
