--- a/index.html
+++ b/index.html
@@ -73,23 +73,23 @@
         <table>
           <thead>
             <tr>
-              <th>Módulo</th>
-              <th>Comando</th>
-              <th>Função</th>
+              <th scope=col>Módulo</th>
+              <th scope=col>Comando</th>
+              <th scope=col>Função</th>
             </tr>
           </thead>
           <tbody>
-              <th>Unix</th>
+              <th scope=row>Unix</th>
               <td>mkdir 'nome_do_diretorio'</td>
               <td>Cria um diretório no local atual</td>
             </tr>
             <tr>
-              <th>HTML</th>
+              <th scope=row>HTML</th>
               <td>Usar a tag 'ul'</td>
               <td>Cria uma lista ordenada</td>
             </tr>
             <tr>
-              <th>CSS</th>
+              <th scope=row>CSS</th>
               <td>background-color</td>
               <td>Define uma nova cor para o plano de fundo</td>
             </tr>
@@ -102,15 +102,17 @@
           Acesse o site e cadastre-se para participar do processo seletivo!</a>
       </footer>
     </main>
-    <aside class="lado-direito" id="lado-direito">
-      <h2>A dor de ser um eterno aprendiz</h2>
-      <p>
-        Todo esse aprendizado apenas foi conquistado por conta da dedicação
-        da equipe da Trybe e do meu próprio esforço. Existem dias em que o
-        conteúdo pode assustar novatos (<i>#everyday</i>), porém, nada que manter o
-        foco e permanecer tentando/procurando ajuda não solucione.
-      </p>
-    </aside>
+    <section id="aside">
+      <aside class="lado-direito" id="lado-direito">
+        <h2>A dor de ser um eterno aprendiz</h2>
+        <p>
+          Todo esse aprendizado apenas foi conquistado por conta da dedicação
+          da equipe da Trybe e do meu próprio esforço. Existem dias em que o
+          conteúdo pode assustar novatos (<i>#everyday</i>), porém, nada que manter o
+          foco e permanecer tentando/procurando ajuda não solucione.
+        </p>
+      </aside>
+    </section>
   </div>
 </body>
 </html>
