--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
       <aside class="lado-direito" id="lado-direito">
         <h2>A dor de ser um eterno aprendiz</h2>
         <p>
-          Todo esse aprendizado apenas foi conquistado por conta da dedicação
-          da equipe da Trybe e do meu próprio esforço. Existem dias em que o
-          conteúdo pode assustar novatos (<i>#everyday</i>), porém, nada que manter o
-          foco e permanecer tentando/procurando ajuda não solucione.
+          O aprendizado apenas veio por conta da staff
+          da Trybe e do meu próprio esforço. Alguns dias o
+          conteúdo pode assustar novatos (<i>#everyday</i>), porém,
+          com persistência, tudo se resolve.
         </p>
       </aside>
     </section>
