--- a/index.html
+++ b/index.html
@@ -1,110 +1,135 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lessons Learned</title>
   <link rel="stylesheet" format="text/css" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Reggae+One&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lobster&family=Reggae+One&display=swap"
+    rel="stylesheet"
+  >
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+    crossorigin="anonymous"
+  >
 </head>
 <body>
-  <header id="cabecalho">
-    <h1 id="titulo">AS DORES DO APRENDIZADO</h1>
+  <header id="cabecalho" class="navbar fixed-top">
+    <div class="container-fluid justify-content-center">
+      <h1 id="titulo">AS DORES DO APRENDIZADO</h1>
+    </div>
   </header>
-  <div id="main_structure">
-    <main>
-      <figure>
-      <img id="minha_foto" src=rodrigo.jpg alt="Foto do Rodrigo">
-      </figure>
-      <nav>
-        <h2>Navegação</h2>
-        <ul>
-          <li><a href="#licoes_aprendidas">Lições aprendidas</a></li>
-          <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
-          <li><a href="#lado-esquerdo">Detalhes sobre meu aprendizado na Trybe</a></li>
-          <li><a href="#lado-esquerdo">A dor de ser um eterno aprendiz</a></li>
-          <li><a href="#rodape">Como entrar na Trybe</a></li>
-        </ul>
-      </nav>
-      <section>
-        <h2>Lições aprendidas</h2>
-        <ol id="licoes_aprendidas">
-          <li>Unix e Bash</li>
-          <li>Git e Github</li>
-          <li>Como funciona a internet</li>
-          <li>Estruturação em HTML</li>
-          <li>HTML semântico</li>
-          <li>Estilos com CSS</li>
-          <li>Importância das soft skills</li>
-          <li>Manipulação do perfil no Linkedin</li>
-          <li>Ética na programação</li>
-          <li>Utilização dos aplicativos Zoom e Slack</li>
-        </ol>
-      </section>
-      <section>
-        <h2>Lições a aprender</h2>
-        <ul id="licoes_a_aprender">
-          <li>JavaScript</li>
-          <li>Lógica de Programação</li>
-          <li>React</li>
-          <li>SQL</li>
-          <li>NodeJS</li>
-          <li>MongoDB</li>
-          <li>Desenvolvimento das soft skills</li>
-          <li>Python</li>
-          <li>Ciência da computação</li>
-          <li>Dicas de produtividade</li>
-        </ul>
-      </section>
-      <article class="lado-esquerdo" id="lado-esquerdo">
-        <h2>Detalhes do meu aprendizado na Trybe</h2>
-        <p>
-          Ao entrar na Trybe, eu era um completo iniciante em programação
-          (e ainda sou), porém, em menos de um mês, já realizo comandos
-          básicos através do terminal do Linux, como criar, mover, remover e
-          navegar por arquivos e diretórios. Também possuo uma base de Git e
-          Github, o que me permite criar repositórios, conectar o remoto
-          ao local e realizar interações entre eles. Com o módulo de HTML e
-          CSS, me tornei capaz de criar páginas da web (como esta XD).
-        </p>
-      </article>
-      <section id="table">
-        <h2>Exemplos de comandos aprendidos</h2>
-        <table>
-          <thead>
-            <tr>
-              <th scope=col>Módulo</th>
-              <th scope=col>Comando</th>
-              <th scope=col>Função</th>
-            </tr>
-          </thead>
-          <tbody>
-              <th scope=row>Unix</th>
-              <td>mkdir 'nome_do_diretorio'</td>
-              <td>Cria um diretório no local atual</td>
-            </tr>
-            <tr>
-              <th scope=row>HTML</th>
-              <td>Usar a tag 'ul'</td>
-              <td>Cria uma lista ordenada</td>
-            </tr>
-            <tr>
-              <th scope=row>CSS</th>
-              <td>background-color</td>
-              <td>Define uma nova cor para o plano de fundo</td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-      <footer id="rodape">
-        <h2>Ficou interessado no curso da Trybe?</h2>
-        <a href=https://www.betrybe.com/ alt="Site da Trybe" target="_blank">
-          Acesse o site e cadastre-se para participar do processo seletivo!</a>
-      </footer>
-    </main>
-    <section id="aside">
-      <aside class="lado-direito" id="lado-direito">
-        <h2>A dor de ser um eterno aprendiz</h2>
+
+  <div id="main_structure" class="container">
+    <div class="row">
+
+      <main class="col">
+        <figure>
+        <img id="minha_foto" src=rodrigo.jpg alt="Foto do Rodrigo">
+        </figure>
+
+        <h2 class="margin-bottom">Navegação</h2>
+        <div class="container-fluid d-flex justify-content-center margin-bottom">
+          <nav class="btn-group-vertical gap-1" role="group" aria-label="Vertical button group">
+            <a class="btn nav-link" href="#licoes_aprendidas">Lições aprendidas</a>
+            <a class="btn nav-link" href="#licoes_a_aprender">Lições a aprender</a>
+            <a class="btn nav-link" href="#lado-esquerdo">Detalhes do meu aprendizado na Trybe</a>
+            <a class="btn nav-link" href="#lado-direito">A dor de ser um eterno aprendiz</a>
+            <a class="btn nav-link" href="#rodape">Como entrar na Trybe</a>
+          </nav>
+        </div>
+
+        <hr/>
+
+        <section class="margin-bottom">
+          <h2 id="licoes_aprendidas" class="margin-bottom">Lições aprendidas</h2>
+          <ol>
+            <li>Unix e Bash</li>
+            <li>Git e Github</li>
+            <li>Como funciona a internet</li>
+            <li>Estruturação em HTML</li>
+            <li>HTML semântico</li>
+            <li>Estilos com CSS</li>
+            <li>Importância das soft skills</li>
+            <li>Manipulação do perfil no Linkedin</li>
+            <li>Ética na programação</li>
+            <li>Utilização dos aplicativos Zoom e Slack</li>
+          </ol>
+        </section>
+
+        <hr/>
+
+        <section>
+          <h2 id="licoes_a_aprender">Lições a aprender</h2>
+          <ul>
+            <li>JavaScript</li>
+            <li>Lógica de Programação</li>
+            <li>React</li>
+            <li>SQL</li>
+            <li>NodeJS</li>
+            <li>MongoDB</li>
+            <li>Desenvolvimento das soft skills</li>
+            <li>Python</li>
+            <li>Ciência da computação</li>
+            <li>Dicas de produtividade</li>
+          </ul>
+        </section>
+
+        <hr/>
+
+        <article class="lado-esquerdo">
+          <h2 id="lado-esquerdo">Detalhes do meu aprendizado na Trybe</h2>
+          <p>
+            Ao entrar na Trybe, eu era um completo iniciante em programação
+            (e ainda sou), porém, em menos de um mês, já realizo comandos
+            básicos através do terminal do Linux, como criar, mover, remover e
+            navegar por arquivos e diretórios. Também possuo uma base de Git e
+            Github, o que me permite criar repositórios, conectar o remoto
+            ao local e realizar interações entre eles. Com o módulo de HTML e
+            CSS, me tornei capaz de criar páginas da web (como esta XD).
+          </p>
+        </article>
+
+        <hr/>
+
+        <section>
+          <h2 id="table">Exemplos de comandos aprendidos</h2>
+          <div class="table-responsive">
+            <table class="table table-sm table-light table-striped table-hover">
+              <thead class="table-dark">
+                <tr>
+                  <th scope=col>Módulo</th>
+                  <th scope=col>Comando</th>
+                  <th scope=col>Função</th>
+                </tr>
+              </thead>
+              <tbody class="table-group-divider">
+                  <th scope=row>Unix</th>
+                  <td>mkdir 'diretorio'</td>
+                  <td>Cria um diretório no local atual</td>
+                </tr>
+                <tr>
+                  <th scope=row>HTML</th>
+                  <td>Usar a tag 'ul'</td>
+                  <td>Cria uma lista ordenada</td>
+                </tr>
+                <tr>
+                  <th scope=row>CSS</th>
+                  <td>background-color</td>
+                  <td>Define uma nova cor para o plano de fundo</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
+      </main>
+
+      <aside class="col">
+        <h2 id="lado-direito">A dor de ser um eterno aprendiz</h2>
         <p>
           O aprendizado apenas veio por conta da staff
           da Trybe e do meu próprio esforço. Alguns dias o
@@ -112,7 +137,26 @@
           com persistência, tudo se resolve.
         </p>
       </aside>
-    </section>
+    </div>
+
   </div>
+
+  <div class="container-fluid" id="footer-container">
+    <footer>
+      <h2 id="rodape">Ficou interessado no curso da Trybe?</h2>
+      <div class="container d-flex justify-content-center">
+        <a href=https://www.betrybe.com/ alt="Site da Trybe" target="_blank" class="btn" id="footer-btn">
+          Acesse o site e cadastre-se para participar do processo seletivo!
+        </a>
+      </div>
+    </footer>
+  </div>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"
+  >
+  </script>
 </body>
 </html>
